--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Solution to Assignment 2 of Coursera</title>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
